--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
 <title>Page Title</title>
 </head>
